<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Touristic Agenda</string>
    <string name="action_settings">Settings</string>

    <!--    LayoutResources-->
    <!--    Add Event-->
    <string name="tv_addEventPage">Welcome to add Events Page</string>
    <string name="tv_addEventDate">Date of Event</string>
    <string name="tv_addEventOrChose">Or</string>
    <string name="btn_addEventSaveLocation">Save Location</string>
    <string name="et_addEventName">Event Name</string>
    <string name="et_addEventPlace">Event Place</string>
    <string name="tv_addEventMessage">Message:</string>
    <string name="btn_saveEvent">Save Event</string>

    <!--    Activity User Change Email-->
    <string name="tv_userChangeEmailAuth">Authenticate User Email</string>
    <string name="et_userChangeEmailOldEmail">Old Email Address</string>
    <string name="et_userChangeEmailPass">Enter your Password</string>
    <string name="btn_userChangeEmailAuth">Authenticate User</string>
    <string name="et_userChangeEmailNewEmail">Enter your new Email Address</string>
    <string name="btn_userChangeEmail">Change Email</string>

    <!--    Activity User Change Password-->
    <string name="tv_userChangePassAuth">Authenticate User Password</string>
    <string name="et_userChangePassEmail">Email Address</string>
    <string name="et_userChangePassOldPass">Enter old password</string>
    <string name="btn_userChangePassAuth">Authenticate User</string>
    <string name="et_userChangePassNewPass">Enter new password</string>
    <string name="et_userChangePassConfNewPass">Conf new Password</string>
    <string name="btn_userChangePassword">Change Password</string>

    <!--    Activity Events Image Show Events-->
    <string name="tv_evImgShowEvents">Show Events</string>

    <!--    Activity Event Image Select Events-->
    <string name="tv_evImgSelectNoEvents">Number of Events</string>
    <string name="tv_evImgSelectEvents">Select Event</string>

    <!--    Activity Event Image Delete Events-->
    <string name="tv_evImgDeleteNoEvents">Number of Events</string>
    <string name="tv_evImgDeleteEvents">Select Event</string>

    <!--    Activity Login User-->
    <string name="tv_loginPage">Enter your Login details</string>
    <string name="et_emailLog">Email Address</string>
    <string name="et_passLog">Password</string>
    <string name="cb_remember">Remember me</string>
    <string name="tv_forgotPass">Forgot Password</string>
    <string name="btn_loginUser">Log In</string>
    <string name="btn_regUserLog">Register</string>

    <!--    Main Page-->
    <string name="tv_mainPage">Welcome to Touristic Agenda</string>

    <!--    Activity Maps-->

    <!--    Activity Register Users-->
    <string name="tv_registerPage">Enter your register details here</string>
    <string name="et_fNameReg">First Name</string>
    <string name="et_lNameReg">Last Name</string>
    <string name="et_phoneReg">Phone Number</string>
    <string name="et_emailReg">Email address</string>
    <string name="et_passReg">Password</string>
    <string name="et_confPassReg">Confirm password</string>
    <string name="btn_registerUser">Register</string>
    <string name="btn_logUserReg">Log In</string>

    <!--    Activity Reset Password-->
    <string name="tv_resetPass">Enter your registered Email</string>
    <string name="et_resetPassEmail">Please enter your email address</string>
    <string name="btn_resetPass">Reset Password</string>

    <!--    Activity Save Location-->
    <string name="et_locationLatitude">Latitude</string>
    <string name="et_locationLongitude">Longitude</string>
    <string name="et_locationAddress">Address</string>
    <string name="et_locationEvent">Event Location</string>

    <!--    Activity Update Event-->
    <string name="tv_updateEventPage">Update Event</string>
    <string name="et_updateEventDate">Date of Event</string>
    <string name="tv_updateEventOr">Or</string>
    <string name="et_updateEventName">Event Name</string>
    <string name="et_updateEventPlace">Event Place</string>
    <string name="tv_updateEventMessage">Message:</string>
    <string name="btn_saveEventUpdate">Save Event</string>

    <!--    Activity Update User-->
    <string name="tv_userPageUp">Edit user profile</string>
    <string name="tv_fNameUp">First name: </string>
    <string name="et_fNameUp">First name</string>
    <string name="tv_lNameUp">Last name: </string>
    <string name="et_lNameUp">Last Name</string>
    <string name="tv_phoneUp">Phone Number: </string>
    <string name="et_phoneUp">Phone Number</string>
    <string name="tv_emailUserUp">Email: </string>
    <string name="et_emailUserUp">Email</string>
    <string name="btn_saveChangesUp">Save Changes</string>

    <!--    Activity Users Page-->
    <string name="tv_userHeader">User Name</string>
    <string name="tv_userWelcome">Welcome</string>
    <string name="tv_userService">Select an event service:</string>
    <string name="drawer_showEvent">Show</string>
    <string name="drawer_addNewEvent">Add New</string>
    <string name="drawer_updateEvent">Update</string>
    <string name="drawer_deleteEvent">Delete</string>
    <string name="drawer_mapEvent">Map</string>
    <string name="open_userPage">Open</string>
    <string name="close_userPage">Close</string>

    <!--    Image Event-->
    <string name="tv_eventDate">Date of event:</string>
    <string name="tv_eventName">Name of event:</string>
    <string name="tv_eventPlace">Place of event:</string>
    <string name="tv_eventMessage">Message:</string>

    <!--Menu Resources-->
    <!--    Menu Change User Email-->
    <string name="mChangeUserEmail_goBack">Go Back</string>

    <!--    Menu Change User Password-->
    <string name="mChangeUserPassword_goBack">Go Back</string>

    <!--    Menu Drawer User Page-->
    <string name="mDUser_addPicture">Add User Picture</string>
    <string name="mDUser_editProfile">Edit User Profile</string>
    <string name="mDUser_changeEmail">Change User Email</string>
    <string name="mDUser_changePassword">Change User Password</string>

    <!--    Menu Events Image-->
    <string name="mEventsImage_goBack">Go Back User</string>
    <string name="mEventsImage_addMenu">Add New Event</string>
    <string name="mEventsImage_Close">Close</string>

    <!--    Menu Main-->

    <!--    Menu Update User-->
    <string name="mUpdateUser_goBack">Go Back</string>

    <!--    Menu Users Page-->
    <string name="menuUser_logOut">Log Out</string>
    <string name="menuUser_editProfile">Edit Profile</string>
    <string name="menuUser_changeEmail">Change Email</string>
    <string name="menuUser_changePassword">Change Password</string>
    <string name="menuUser_close">Close</string>

</resources>