<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".UpdateUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvUserNameUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/tv_userPageUp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/tv_fNameUp"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="22sp"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/etFirstNameUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/et_round_corners"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/et_fNameUp"
            android:textSize="24sp"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/tv_lNameUp"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="22sp"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/etLastNameUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/et_round_corners"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/et_lNameUp"
            android:textSize="24sp"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/tv_phoneUp"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="22sp"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/etPhoneUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/et_round_corners"
            android:ems="10"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/et_phoneUp"
            android:textSize="24sp"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/tv_emailUserUp"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="22sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tvEmailUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/et_round_corners"
            android:ems="10"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/et_emailUserUp"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <Button
            android:id="@+id/btnSaveUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_blue"
            android:text="@string/btn_saveChangesUp"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>