<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".UpdateEvent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEventUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/tv_updateEventPage"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEventDateUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/et_updateEventDate"
                android:inputType="date"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imgViewEventUp"
            android:layout_width="280dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#f2f2f2"
            app:srcCompat="@drawable/image_add_event"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvOrEventUp"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:text="@string/tv_updateEventOr"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat,RtlSymmetry" />

        <ImageButton
            android:id="@+id/btnTakePictureEventUp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/image_camera"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEventNameUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/et_updateEventName"
                android:inputType="text|textCapWords"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEventPlaceUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/et_updateEventPlace"
                android:inputType="text|textCapWords"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvEventMessageUp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:text="@string/tv_updateEventMessage"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/etEventMessageUp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="#eaeae1"
            android:ems="10"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            tools:ignore="InefficientWeight,LabelFor,RtlSymmetry" />

        <Button
            android:id="@+id/btnSaveEventUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_fading"
            android:text="@string/btn_saveEventUpdate"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>